--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -4,10 +4,10 @@
 
 ## Installing R
 
-- **Step 1:** First download R freely from the Comprehensive R Archive Network (CRAN) [https://cran.r-project.org/](https://cran.r-project.org/).
-(At the moment of writing, R 4.0.3  is the latest version. Choose the most recent one.)
+- **Step 1:** First download R freely from the Comprehensive R Archive Network (CRAN) [https://posit.co/download/rstudio-desktop/](https://posit.co/download/rstudio-desktop/).
+(At the moment of writing, R 4.2.3  is the latest version. Choose the most recent one.)
 
-- **Step 2:** Then install R Studio’s IDE (stands for integrated development environment), a powerful user interface for R from [https://rstudio.com/products/rstudio/download/](https://rstudio.com/products/rstudio/download/). Get the Open Source Edition of RStudio Desktop. RStudio allows you to run R in a more user-friendly environment.
+- **Step 2:** Then install R Studio’s IDE (stands for integrated development environment), a powerful user interface for R from [https://posit.co/download/rstudio-desktop/](https://posit.co/download/rstudio-desktop/). Get the Open Source Edition of RStudio Desktop. RStudio allows you to run R in a more user-friendly environment.
 
    - You need to install **both** R and Rstudio to use RStudio.
 
