--- a/docs/bookdown-demo.tex
+++ b/docs/bookdown-demo.tex
@@ -4,10 +4,14 @@
 %
 \documentclass[
 ]{book}
+\title{Fundamentals of Mathematics and Statistics with R}
+\author{Dr.~Priyanga D. Talagala}
+\date{2023-03-30}
+
 \usepackage{amsmath,amssymb}
 \usepackage{lmodern}
-\usepackage{ifxetex,ifluatex}
-\ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
+\usepackage{iftex}
+\ifPDFTeX
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
   \usepackage{textcomp} % provide euro and other symbols
@@ -118,22 +122,18 @@
 \makeatother
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\fancyfoot[CO,CE]{Prepared by Dr. Priyanga D. Talagala  (Copyright 2022 P. D. Talagala)}
+\fancyfoot[CO,CE]{Prepared by Dr. Priyanga D. Talagala  (Copyright 2023 P. D. Talagala)}
 \fancyfoot[LE,RO]{\thepage}
 \usepackage{wrapfig}
 \usepackage{floatrow}
 \floatplacement{figure}{H}
 \floatplacement{table}{H}
 \makeatletter\renewcommand*{\fps@figure}{H}\makeatother
-\ifluatex
+\ifLuaTeX
   \usepackage{selnolig}  % disable illegal ligatures
 \fi
 \usepackage[]{natbib}
 \bibliographystyle{apalike}
-
-\title{Fundamentals of Mathematics and Statistics with R}
-\author{Dr.~Priyanga D. Talagala}
-\date{2022-01-16}
 
 \begin{document}
 \maketitle
@@ -152,10 +152,10 @@
 
 \begin{itemize}
 \item
-  \textbf{Step 1:} First download R freely from the Comprehensive R Archive Network (CRAN) \url{https://cran.r-project.org/}.
-  (At the moment of writing, R 4.0.3 is the latest version. Choose the most recent one.)
+  \textbf{Step 1:} First download R freely from the Comprehensive R Archive Network (CRAN) \url{https://posit.co/download/rstudio-desktop/}.
+  (At the moment of writing, R 4.2.3 is the latest version. Choose the most recent one.)
 \item
-  \textbf{Step 2:} Then install R Studio's IDE (stands for integrated development environment), a powerful user interface for R from \url{https://rstudio.com/products/rstudio/download/}. Get the Open Source Edition of RStudio Desktop. RStudio allows you to run R in a more user-friendly environment.
+  \textbf{Step 2:} Then install R Studio's IDE (stands for integrated development environment), a powerful user interface for R from \url{https://posit.co/download/rstudio-desktop/}. Get the Open Source Edition of RStudio Desktop. RStudio allows you to run R in a more user-friendly environment.
 
   \begin{itemize}
   \item
@@ -244,10 +244,10 @@ The following the code installs the \texttt{tidyverse} package from CRAN
 \end{verbatim}
 
 \begin{verbatim}
-## v ggplot2 3.3.5     v purrr   0.3.4
-## v tibble  3.1.6     v dplyr   1.0.7
-## v tidyr   1.1.4     v stringr 1.4.0
-## v readr   1.4.0     v forcats 0.5.1
+## v ggplot2 3.3.6      v purrr   0.3.5 
+## v tibble  3.1.8      v dplyr   1.0.10
+## v tidyr   1.2.0      v stringr 1.4.1 
+## v readr   2.1.2      v forcats 0.5.1
 \end{verbatim}
 
 \begin{verbatim}
@@ -1222,7 +1222,7 @@ You can compute the model coefficients in R as follow:
 
 \textbf{NOTE}
 
-\emph{In our example, with youtube, newspaper and facebook predictor variables, the adjusted} \(R^2 = 0.89\), \emph{meaning that "89\% of the variance in the measure of sales can be predicted by youtube, newspaper and facebook advertising budgets.}
+\emph{In our example, with youtube, newspaper and facebook predictor variables, the adjusted} \(R^2 = 0.89\), \emph{meaning that ``89\% of the variance in the measure of sales can be predicted by youtube, newspaper and facebook advertising budgets.}
 
 \emph{This model is better than the simple linear model with only facebook, which had an adjusted} \(R^2\) \emph{of 0.05.}
 
