--- a/07-intro_old.Rmd
+++ b/07-intro_old.Rmd
@@ -1,26 +1,20 @@
-# Introduction to R, Rstudio and Posit Cloud {#intro}
+# Introduction to R {#intro1}
 
 \pagenumbering{arabic}
 
-## Installing R and Rstudio
+## Installing R
 
 - **Step 1:** First download R freely from the Comprehensive R Archive Network (CRAN) [https://cran.r-project.org/](https://cran.r-project.org/).
-(At the moment of writing, R 4.4.1  is the latest version. Choose the most recent one.)
+(At the moment of writing, R 4.3.1  is the latest version. Choose the most recent one.)
 
-- **Step 2:** Then install R Studio’s IDE (stands for integrated development environment), a powerful user interface for R from [https://posit.co/download/rstudio-desktop/](https://posit.co/download/rstudio-desktop/. Get the Open Source Edition of RStudio Desktop. RStudio allows you to run R in a more user-friendly environment.
+- **Step 2:** Then install R Studio’s IDE (stands for integrated development environment), a powerful user interface for R from [https://rstudio.com/products/rstudio/download/](https://rstudio.com/products/rstudio/download/). Get the Open Source Edition of RStudio Desktop. RStudio allows you to run R in a more user-friendly environment.
 
    - You need to install **both** R and Rstudio to use RStudio.
 
-   - If you have a pre-existing installation of R and/or RStudio, I highly recommend that you reinstall both and get as current as possible. 
+   - If you have a pre-existing installation of R and/or RStudio, I highly recommend that you re install both and get as current as possible. 
 
 - **Step 3:** Then open **Rstudio**.
 
-
-### Posit Cloud
-
-- In 2022, RStudio changed its corporate name to Posit with the aim of expanding its focus beyond R to include users of Python and Visual Studio Code.
-
-- If you don't want to download or install R and R Studio, you can use RStudio on [Posit Cloud] (https://posit.cloud/) for free.
 
 ## RStudio layout
 
@@ -92,4 +86,3 @@ library(tidyverse)
 ## Getting started with R
 
 [An Introduction to R: https://cran.r-project.org/doc/manuals/R-intro.pdf](https://cran.r-project.org/doc/manuals/R-intro.pdf)
-
